// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.rowSelection fix expand on th left when selection column fixed on the left 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-expand-icon-col"
                />
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  />
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  />
                  <td
                    style="padding:0;border:0;height:0"
                  />
                  <td
                    style="padding:0;border:0;height:0"
                  />
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  />
                  <td
                    style="padding:0;border:0;height:0"
                  />
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left when any other column is fixed 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  />
                  <td
                    style="padding:0;border:0;height:0"
                  />
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection render with default selection correctly 1`] = `
<div>
  <div
    class="ant-dropdown ant-dropdown-hidden"
  >
    <ul
      class="ant-dropdown-menu ant-dropdown-menu-light ant-dropdown-menu-root ant-dropdown-menu-vertical"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
        role="menuitem"
      >
        Select all data
      </li>
      <li
        class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
        role="menuitem"
      >
        Invert current page
      </li>
    </ul>
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="ant-table-selection-extra"
                      >
                        <span
                          class="ant-dropdown-trigger ant-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                          <div
                            style="position: absolute; top: 0px; left: 0px; width: 100%;"
                          />
                        </span>
                        <div>
                          <div
                            class="ant-dropdown"
                            style="opacity: 0;"
                          >
                            <ul
                              class="ant-dropdown-menu ant-dropdown-menu-light ant-dropdown-menu-root ant-dropdown-menu-vertical"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                role="menuitem"
                              >
                                Select all data
                              </li>
                              <li
                                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                role="menuitem"
                              >
                                Invert current page
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer from ConfigProvider 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="ant-table-selection-extra"
                      >
                        <span
                          class="ant-dropdown-trigger ant-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <div>
                          <div
                            class="ant-dropdown"
                            style="opacity: 0;"
                          >
                            <ul
                              class="ant-dropdown-menu ant-dropdown-menu-light ant-dropdown-menu-root ant-dropdown-menu-vertical"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                role="menuitem"
                              >
                                Select all data
                              </li>
                              <li
                                class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                role="menuitem"
                              >
                                Invert current page
                              </li>
                            </ul>
                          </div>
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px; width: 100%;"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection use column as selection column when key is \`selection-column\` 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout:auto"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
